--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         }
     ],
     "license": "MIT",
+    "require": {
+        "php": ">=5.3.0"
+    },
     "autoload": {
         "psr-0": {
-            "test_composer\\": "src/"
+            "HelloWorld": "src/"
         }
-    },
-    "require": {}
+    }
 }
